added support for dialog sheet to be expanded along with keyboard

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -6,4 +6,6 @@
     <string name="title_">Payment For \nMerchant Testing</string>
     <string name="enter_card_title">Or Enter Card</string>
     <string name="we_accept_title">We Accept</string>
+    <string name="card_number_title">Card Number</string>
+    <string name="mm_yy_title">MM/YY</string>
 </resources>
