--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="type_amount_hint">اكتب المبلغ هناe</string>
-    <string name="pay">دفع %s د.ك</string>
+    <string name="pay">دفع %s% s</string>
     <string name="start_done">منتهي</string>
     <string name="title_">Payment For \nMerchant Testing</string>
     <string name="enter_card_title">Or Enter Card</string>
@@ -10,4 +10,5 @@
     <string name="mm_yy_title">MM/YY</string>
     <string name="settings_title">Settings</string>
     <string name="checkout_sdk_title">Chekckout SDK</string>
+    <string name="currency">د.ك</string>
 </resources>
