--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="options">Options</string>
     <string name="checkout_sdk_title">Checkout SDK</string>
     <string name="currency">K.D</string>
+    <string name="amount_text">%s %s</string>
 </resources>
