added refactor to tapPayementBottomSheet

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -17,6 +17,7 @@
     <string name="powered_by_title">مدعوم من Tap Payment</string>
     <string name="edit">تعديل</string>
     <string name="select_title">يختار</string>
+    <string name="item_number_title">1 ITEM | K.D</string>
 
 
 </resources>
