--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="type_amount_hint">Type the amount here</string>
     <string name="pay">Pay %s %s</string>
     <string name="start_done">done</string>
-    <string name="title_">Payment For \n<b>Merchant Testing</b></string>
+    <string name="title_">Payment For \n<b><font size="20">Merchant Testing</font></b></string>
     <string name="select_title">Select</string>
     <string name="enter_card_title">Or Enter Card</string>
     <string name="we_accept_title">We Accept</string>
